# flexconnect-llm

./: LICENSE  README.md  flexconnect_pro.py  pyproject.toml
examples/: 01_basico.py  02_economia_custo.py  03_pro_cache_streaming.py
src/flexconnect/: __init__.py  adapter.py  core.py  pro.py
