[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flexconnect-llm"
version = "0.1.0"
description = "Um cliente, todos os LLMs. Roteamento por intencao, fallback automatico e tracking de custo."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Bruno Drade"}]
keywords = ["llm", "openai", "gemini", "router", "gateway", "fallback", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://github.com/brunodrade88-cell/flexconnect-llm"
Repository = "https://github.com/brunodrade88-cell/flexconnect-llm"
Issues = "https://github.com/brunodrade88-cell/flexconnect-llm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/flexconnect"]
